--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "jsonwebtoken": "^9.0.2",
     "next": "16.0.3",
     "nodemon": "^3.1.11",
+    "pg": "^8.16.3",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
