--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^5.2.2",
     "bcrypt": "^6.0.0",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.554.0",
     "next": "16.0.3",
     "nodemon": "^3.1.11",
     "pg": "^8.16.3",
