--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "bcrypt": "^6.0.0",
+    "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.554.0",
     "next": "16.0.3",
@@ -20,6 +21,7 @@
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.1",
     "react-hot-toast": "^2.6.0",
+    "redis": "^5.10.0",
     "zod": "^4.1.13"
   },
   "devDependencies": {
